# meal-tracker

./: CHANGELOG.md  CLAUDE.md  index.html  main.js  package-lock.json  package.json
.github/workflows/: build.yml
scripts/: afterSign.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
